--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
+          <a href="https://github.com/nondumiso0327" target="_blank">Nondumiso Zungu</a> and is
           <a href="#" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
