Updated all the URLs

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <p>
           This project was coded by
           <a href="https://github.com/nondumiso0327" target="_blank">Nondumiso Zungu</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/nondumiso0327/my-first-weather-app" target="_blank"> on GitHub</a> and
+          <a href="https://preeminent-pika-d3cf0d.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
